// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ThemeSwitcher component > restores > dark theme if dark theme is saved in localstorage 1`] = `
"<div>
  <oc-select-stub model-value="undefined" label="Theme" label-hidden="true" clearable="false" options="[object Object],undefined,undefined" option-label="label"></oc-select-stub>
</div>"
`;

exports[`ThemeSwitcher component > restores > light theme if light theme is saved in localstorage 1`] = `
"<div>
  <oc-select-stub model-value="[object Object]" label="Theme" label-hidden="true" clearable="false" options="[object Object],undefined,undefined" option-label="label"></oc-select-stub>
</div>"
`;
